compiler/test-data/parser/errors/scheme/missing_field_type.frel
module test

scheme User {
    name
}
